src/aggregator-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aggregator-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aggregator
  template:
    metadata:
      labels:
        app: aggregator
    spec:
      containers:
        - name: aggregator
          image: shopping.aggregator:v1
---
apiVersion: v1
kind: Service
metadata:
  name: aggregator-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: aggregator
  ports:
  - name: aggregator
    protocol: TCP
    port: 80
    targetPort: 80
