src/catalog-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog-api
  template:
    metadata:
      labels:
        app: catalog-api
    spec:
      containers:
        - name: catalog-api
          image: catalog.api:v1
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: catalog-api
  ports:
  - name: catalog-api
    protocol: TCP
    port: 80
    targetPort: 80
  - name: cataloggrpc
    protocol: TCP
    port: 666
    targetPort: 666
