src/discount-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discount-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discount-grpc
  template:
    metadata:
      labels:
        app: discount-grpc
    spec:
      containers:
        - name: discount-grpc
          image: discount.grpc:v1
---
apiVersion: v1
kind: Service
metadata:
  name: discount-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: discount-grpc
  ports:
  - name: discount-grpcservice
    protocol: TCP
    port: 80
    targetPort: 80
  - name: discount-grpc
    protocol: TCP
    port: 666
    targetPort: 666
