src/ocelotApiGw-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ocelotapigw-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ocelotapigw
  template:
    metadata:
      labels:
        app: ocelotapigw
    spec:
      containers:
        - name: ocelotapigw
          image: ocelotapigw:v1
---
apiVersion: v1
kind: Service
metadata:
  name: ocelotapigw-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: ocelotapigw
  ports:
  - name: ocelotapigw
    protocol: TCP
    port: 80
    targetPort: 80
