src/webapp-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
        - name: webapp
          image: webapp:v1
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: webapp
  ports:
  - name: webapp
    protocol: TCP
    port: 80
    targetPort: 80
